# TurtlyScope

./: .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/api/routes/: pages.py  visualize.py
app/core/: config.py  logging.py  security.py
app/services/: graph_viz.py
app/static/css/: theme.css
app/templates/: base.html  error.html  index.html
tests/: test_app.py
