[project]
name = "turtle-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pip-tools>=7.5.1",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "pyvis>=0.3.2",
    "rdflib>=7.2.1",
    "ruff>=0.13.3",
    "uvicorn>=0.37.0",
]
